--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,13 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel='stylesheet' href='/app.css'/>
 		%svelte.head%
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
 	</body>
+	<div class='absolute bottom-0 right-0 text-gray-200'>
+	<a href='https://www.freepik.com/photos/background'>Background photo created by kues1 - www.freepik.com</a>
+	</div>
 </html>
