add various thing including format

--- a/src/app.html
+++ b/src/app.html
@@ -4,18 +4,23 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel='stylesheet' href='/app.css'/>
-	 	<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet"> 
-		<link rel='stylesheet' href='/lineicons/lineicons.css'/>
+		<link rel="stylesheet" href="/app.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="/lineicons/lineicons.css" />
 
 		%svelte.head%
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
 	</body>
-	<div class='absolute bottom-0 right-0 text-gray-200'>
-	<a href='https://www.freepik.com/photos/background'>Background photo created by kues1 - www.freepik.com</a>
+	<div class="absolute bottom-0 right-0 text-gray-200">
+		<a href="https://www.freepik.com/photos/background"
+			>Background photo created by kues1 - www.freepik.com</a
+		>
 	</div>
 </html>
